fix: enhancing contrast

--- a/assets/css/_common.css
+++ b/assets/css/_common.css
@@ -25,5 +25,5 @@
 }
 
 .dim {
-  opacity: 50%;
+  opacity: var(--dim-opacity);
 }
